--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
-    "@rails/webpacker": "5.4.4",
+    "@hotwired/stimulus": "^3.2.1",
+    "@hotwired/turbo-rails": "^7.2.5",
     "flowbite": "^1.6.3",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
-  "devDependencies": {
-    "webpack-dev-server": "^3"
+  "scripts": {
+    "build": "webpack --config webpack.config.js"
   }
 }
